--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(pkgsample sample.cpp)
 
+install (FILES 
+	${CMAKE_BINARY_DIR}/pkgsample
+	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_EXECUTE WORLD_READ GROUP_EXECUTE GROUP_READ
+	DESTINATION bin)
+
